reintroduced horizontal scroll, fixed

--- a/css/style.css
+++ b/css/style.css
@@ -39,8 +39,9 @@ html {
 
 html, body {
 
-    width: 100%;
+    width: 100vw;
     min-height: 100%;
+    overflow: hidden;
 
 }
 
@@ -51,7 +52,7 @@ body {
     font-weight: 400;
     background: linear-gradient(to bottom right, #000b24, #000000);
     color: #ffffff;
-    width: 100%;
+    margin: 0;
 
 }
 
@@ -153,11 +154,10 @@ section {
 
 }
 
-#projects_intro {
+#projects {
 
-    height: 80vh;
+    height: 150vh;
     width: 100%;
-    padding-bottom: 15vh;
 
 }
 
@@ -226,6 +226,32 @@ section {
 .project_desc {
 
     padding-top: 4vh;
+
+}
+
+.horizontal__content {
+
+    margin-top: 25vh;
+    display: flex;
+    overflow: hidden;
+    padding-left: 100vw;
+
+}
+
+.horizontal__item {
+
+    border: 1px solid lightblue;
+    padding: 10vh 4vw;
+    justify-content: space-between;
+    flex-direction: column;
+    background-color: transparent;
+    backdrop-filter: blur(2px);
+
+}
+
+.horizontal__item:not(last-child) {
+
+    margin-right: 8vw;
 
 }
 
